--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,6 +26,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- CSS only -->
+    <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+  />
     <title>React App</title>
   </head>
   <body>
