--- a/client/public/index.html
+++ b/client/public/index.html
@@ -31,7 +31,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
   />
-    <title>React App</title>
+    <title>ExChanger</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
